--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Software Engineer with expertise in<br />
 					Ruby, JavaScript, Rails and React</p>
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Resume</a></li>
+						<li><a href="http://res.cloudinary.com/duovuuybb/raw/upload/v1487805083/Resume.pdf" class="button special icon fa-download">Resume</a></li>
 						<li><a href="#" class="button special icon fa-download">Cover letter</a></li>
 					</ul>
 				</div>
