--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>Victor Guillen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,7 +24,7 @@
 					Ruby, JavaScript, Rails and React</p>
 					<ul class="actions">
 						<li><a href="http://res.cloudinary.com/duovuuybb/raw/upload/v1487805083/Resume.pdf" class="button special icon fa-download">Resume</a></li>
-						<li><a href="#" class="button special icon fa-download">Cover letter</a></li>
+						<li><a href="http://res.cloudinary.com/duovuuybb/raw/upload/v1487805085/CoverLetter.pdf" class="button special icon fa-download">Cover letter</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/p2.png" alt="" /></div></div>
@@ -49,12 +49,12 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
 						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Instashop</h3>
+							<p>Instashop is a Full-stack single-page app that makes online shopping easier, it allows its users to curated wish lists and share them with friends. Inspired by Svpply and UI/UX modeled after Instagram.</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
+						<div class="image"><img src="images/insta.png" alt="" /></div>
 						<div class="content">
 							<h3>Ultrices nullam aliquam</h3>
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
