--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
+						<div class="image"><img src="images/dotsp.png" alt="" /></div>
 						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Dots</h3>
+							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
+						<div class="image"><img src="images/dwel.png" alt="" /></div>
 						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
+							<h3>Dwel</h3>
+							<p>Dwel is an IOS app built using React Native and Rails, it provides an intuitive communications platform between landlords and tenants. </p>
 						</div>
 					</section>
 					<section class="special">
