project photo fixed size

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/dwel.png" alt="" /></div>
+						<div class="image"><img src="images/dwelp.png" alt="" /></div>
 						<div class="content">
 							<h3>Dwel</h3>
 							<p>Dwel is an IOS app built using React Native and Rails, it provides an intuitive communications platform between landlords and tenants. </p>
