--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/insta.png" alt="" /></div>
 						<div class="content">
-							<h3>Instashop</h3>
+							<h3 href="http://www.insta-shop.io" cursor="pointer">Instashop</h3>
 							<p>Instashop is a Full-stack single-page app that makes online shopping easier, it allows its users to curated wish lists and share them with friends. Inspired by Svpply and UI/UX modeled after Instagram.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/dotsp.png" alt="" /></div>
 						<div class="content">
-							<h3>Dots</h3>
+							<h3 href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</h3>
 							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/dwelp.png" alt="" /></div>
 						<div class="content">
-							<h3>Dwel</h3>
+							<h3 href="https://github.com/mttmcgrgr/dwel" cursor="pointer">Dwel</h3>
 							<p>Dwel is an IOS app built using React Native and Rails, it provides an intuitive communications platform between landlords and tenants. </p>
 						</div>
 					</section>
