linked projects test

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/insta.png" alt="" /></div>
 						<div class="content">
-							<h3 href="http://www.insta-shop.io" cursor="pointer">Instashop</h3>
+							<h3><a href="http://www.insta-shop.io" cursor="pointer">Instashop</a></h3>
 							<p>Instashop is a Full-stack single-page app that makes online shopping easier, it allows its users to curated wish lists and share them with friends. Inspired by Svpply and UI/UX modeled after Instagram.</p>
 						</div>
 					</section>
