--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>Projects<br /></h2><br />
+					<p>This is a sample of the projects that I've worked <br />on in the last six months. Most of these sites were <br /> developed using a Ruby on Rails backend and a React / React Native frontend.</p>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
@@ -56,14 +56,14 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/dotsp.png" alt="" /></div>
 						<div class="content">
-							<h3 href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</h3>
+							<h3><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
 							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/dwelp.png" alt="" /></div>
 						<div class="content">
-							<h3 href="https://github.com/mttmcgrgr/dwel" cursor="pointer">Dwel</h3>
+							<h3><a href="https://github.com/mttmcgrgr/dwel" cursor="pointer">Dwel</a></h3>
 							<p>Dwel is an IOS app built using React Native and Rails, it provides an intuitive communications platform between landlords and tenants. </p>
 						</div>
 					</section>
