--- a/index.html
+++ b/index.html
@@ -33,14 +33,9 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Projects<br /></h2><br />
-					<p>This is a sample of the projects that I've worked <br />on in the last six months. Most of these sites were <br /> developed using a Ruby on Rails backend and a React / React Native frontend.</p>
+					<h2>Projects</h2>
+					<h4>This is a sample of the projects that I've worked on in the last six months.<br /> Most of these sites were developed using a Ruby on Rails backend and a<br /> React / React Native frontend. I enjoy working on design-driven projects.</h4>
 				</header>
-				<ul class="icons major">
-					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
 			</section>
 
 		<!-- Two -->
@@ -69,11 +64,9 @@
 					</section>
 					<section class="special">
 						<ul class="icons labeled">
-							<li><span class="icon fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon fa-refresh"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
+							<li><span class="icon fa-file-text"><span class="label">Atom</span></span></li>
+							<li><span class="icon fa-code-fork"><span class="label">Github Heroku</span></span></li>
+							<li><span class="icon fa-cloud"><span class="label">Cloudinary CDN</span></span></li>
 						</ul>
 					</section>
 				</div>
@@ -82,14 +75,13 @@
 		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
+					<h2>Skills</h2>
+					<ul class="icons labeled">
+						<li><span class="icon fa-file-text"><span class="label">Atom</span></span></li>
+						<li><span class="icon fa-code-fork"><span class="label">Github Heroku</span></span></li>
+						<li><span class="icon fa-cloud"><span class="label">Cloudinary CDN</span></span></li>
+					</ul>
 				</header>
-				<ul class="actions">
-					<li><a href="#" class="button special icon fa-download">Download</a></li>
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
 			</section>
 
 		<!-- Four -->
@@ -416,9 +408,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://github.com/victorguillen" class="icon fa-github"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.linkedin.com/in/victor-guillen-a7b70748" class="icon fa-linkedin-square"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/victorguillen/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
 				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
