--- a/index.html
+++ b/index.html
@@ -77,9 +77,22 @@
 				<header class="major">
 					<h2>Skills</h2>
 					<ul class="icons labeled">
-						<li><span class="icon fa-file-text"><span class="label">Atom</span></span></li>
-						<li><span class="icon fa-code-fork"><span class="label">Github Heroku</span></span></li>
-						<li><span class="icon fa-cloud"><span class="label">Cloudinary CDN</span></span></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/ruby-plain.svg" alt="" /><span class="my-label">Ruby</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/rails-plain.svg" alt="" /><span class="my-label">Ruby on Rails</span></div></li><br />
+						<li><div class="my-div"><img class="my-icons" src="images/icons/html5-original.svg" alt="" /><span class="my-label">HTML5</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/css3-original.svg" alt="" /><span class="my-label">CSS3</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/sass-original.svg" alt="" /><span class="my-label">SASS</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/illustrator-line.svg" alt="" /><span class="my-label">Illustrator</span></div></li><br />
+						<li><div class="my-div"><img class="my-icons" src="images/icons/atom-original.svg" alt="" /><span class="my-label">Atom</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/heroku-original.svg" alt="" /><span class="my-label">Heroku</span></div></li><br />
+						<li><div class="my-div"><img class="my-icons" src="images/icons/mysql-original.svg" alt="" /><span class="my-label">MySQL</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/postgresql-plain.svg" alt="" /><span class="my-label">PostgreSQL</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/jquery-original.svg" alt="" /><span class="my-label">JQuery</span></div></li>
+						<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
 					</ul>
 				</header>
 			</section>
@@ -412,7 +425,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://www.linkedin.com/in/victor-guillen-a7b70748" class="icon fa-linkedin-square"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/victorguillen/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
