changed personal blurb

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Victor Guillen</a></h1>
-					<p>Software Engineer with expertise in<br />
-					Ruby, JavaScript, Rails and React</p>
+					<p class="my-blurb">Software Engineer with a passion for design and a <br />
+						 unique approach to problem solving. I am versed<br />
+						  in JavaScript, Ruby, HTML5, CSS3 and Spanish.</p>
+
 					<ul class="actions">
 						<li><a href="http://res.cloudinary.com/duovuuybb/raw/upload/v1487805083/Resume.pdf" class="button special icon fa-download">Resume</a></li>
 						<li><a href="http://res.cloudinary.com/duovuuybb/raw/upload/v1487805085/CoverLetter.pdf" class="button special icon fa-download">Cover letter</a></li>
@@ -34,7 +36,11 @@
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
 					<h2>Projects</h2>
-					<h4>This is a sample of the projects that I've worked on in the last six months.<br /> Most of these sites were developed using a Ruby on Rails backend and a<br /> React / React Native frontend. I enjoy working on design-driven projects.</h4>
+					<div class="my-proj-blurb-cont">
+						<h4 class="my-project-blurb">This is a sample of the projects that I've worked on in the last six months.<br />
+							 Most of these sites were developed using a Ruby on Rails backend paired<br />
+							 a with React frontend. I am very design-driven which reflects in my projects.</h4>
+					</div>
 				</header>
 			</section>
 
@@ -77,22 +83,32 @@
 				<header class="major">
 					<h2>Skills</h2>
 					<ul class="icons labeled">
-						<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/ruby-plain.svg" alt="" /><span class="my-label">Ruby</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/rails-plain.svg" alt="" /><span class="my-label">Ruby on Rails</span></div></li><br />
-						<li><div class="my-div"><img class="my-icons" src="images/icons/html5-original.svg" alt="" /><span class="my-label">HTML5</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/css3-original.svg" alt="" /><span class="my-label">CSS3</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/sass-original.svg" alt="" /><span class="my-label">SASS</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/illustrator-line.svg" alt="" /><span class="my-label">Illustrator</span></div></li><br />
-						<li><div class="my-div"><img class="my-icons" src="images/icons/atom-original.svg" alt="" /><span class="my-label">Atom</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/heroku-original.svg" alt="" /><span class="my-label">Heroku</span></div></li><br />
-						<li><div class="my-div"><img class="my-icons" src="images/icons/mysql-original.svg" alt="" /><span class="my-label">MySQL</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/postgresql-plain.svg" alt="" /><span class="my-label">PostgreSQL</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/jquery-original.svg" alt="" /><span class="my-label">JQuery</span></div></li>
-						<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
+						<div class="my-column-container">
+							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/ruby-plain.svg" alt="" /><span class="my-label">Ruby</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/rails-plain.svg" alt="" /><span class="my-label">Ruby on Rails</span></div></li><br />
+							</div>
+							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/html5-original.svg" alt="" /><span class="my-label">HTML5</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/css3-original.svg" alt="" /><span class="my-label">CSS3</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/sass-original.svg" alt="" /><span class="my-label">SASS</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/illustrator-line.svg" alt="" /><span class="my-label">Illustrator</span></div></li><br />
+							</div>
+							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/atom-original.svg" alt="" /><span class="my-label">Atom</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/heroku-original.svg" alt="" /><span class="my-label">Heroku</span></div></li><br />
+							</div>
+							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/mysql-original.svg" alt="" /><span class="my-label">MySQL</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/postgresql-plain.svg" alt="" /><span class="my-label">PostgreSQL</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/jquery-original.svg" alt="" /><span class="my-label">JQuery</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
+							</div>
+						</div>
 					</ul>
 				</header>
 			</section>
