--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<header class="major">
 					<h2>Projects</h2>
 					<div class="my-proj-blurb-cont">
-						<h4 class="my-project-blurb">This is a sample of the projects that I've worked on in the last six months.<br />
+						<h4 class="my-project-blurb">Test This is a sample of the projects that I've worked on in the last six months.<br />
 							 Most of these sites were developed using a Ruby on Rails backend paired<br />
 							 a with React frontend. I am very design-driven which reflects in my projects.</h4>
 					</div>
