--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 	</head>
 	<body id="top">
 
@@ -20,7 +21,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Victor Guillen</a></h1>
-					<p class="my-blurb">Software Engineer with a passion for design and a <br />
+					<p class="my-blurb">Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a <br />
 						 unique approach to problem solving. I am versed<br />
 						  in JavaScript, Ruby, HTML5, CSS3 and Spanish.</p>
 
@@ -37,7 +38,7 @@
 				<header class="major">
 					<h2>Projects</h2>
 					<div class="my-proj-blurb-cont">
-						<h4 class="my-project-blurb">Test This is a sample of the projects that I've worked on in the last six months.<br />
+						<h4 class="my-project-blurb">This is a sample of the projects that I've worked on in the last six months.<br />
 							 Most of these sites were developed using a Ruby on Rails backend paired<br />
 							 a with React frontend. I am very design-driven which reflects in my projects.</h4>
 					</div>
