updated content, fixed wrapping

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h1><a href="#">Victor Guillen</a></h1>
 					<p class="my-blurb">Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a <br />
 						 unique approach to problem solving. I am versed<br />
-						  in JavaScript, Ruby, HTML5, CSS3 and Spanish.</p>
+						  in JavaScript, Ruby, HTML5, CSS3 and Spanish!</p>
 
 					<ul class="actions">
 						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1502491193/ResumeVG_u551mb.pdf" class="button special icon fa-download">Resume</a></li>
@@ -38,9 +38,9 @@
 				<header class="major">
 					<h2>Projects</h2>
 					<div class="my-proj-blurb-cont">
-						<h4 class="my-project-blurb">This is a sample of the projects that I've worked on in the last six months.<br />
-							 Most of these sites were developed using a Ruby on Rails backend paired<br />
-							 a with React frontend. I am very design-driven which reflects in my projects.</h4>
+						<h4 class="my-project-blurb">Here are a few of the projects I've worked on.<br />
+							 They were developed using Ruby on Rails, React and HTML5 Canvas.<br />
+							 I believe less is more and my design tends to be minimal and clean. <i class="em em-sparkles"></i></h4>
 					</div>
 				</header>
 			</section>
@@ -52,7 +52,7 @@
 						<div class="image"><img src="images/insta.png" alt="" /></div>
 						<div class="content">
 							<h3><a href="http://www.insta-shop.io" cursor="pointer">Instashop</a></h3>
-							<p>Instashop is a Full-stack single-page app that makes online shopping easier, it allows its users to curated wish lists and share them with friends. Inspired by Svpply and UI/UX modeled after Instagram.</p>
+							<p>Instashop is a Full-stack single-page app that makes online shopping easier, it allows its users to curated wish lists and share them with friends. Inspired by Svpply and UI/UX modeled after Instagram. It's built with a React frontend paired with a Ruby on Rails backend.</p>
 						</div>
 					</section>
 					<section class="spotlight">
