--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Victor Guillen</a></h1>
-					<p class="my-blurb">Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a <br />
-						 unique approach to problem solving. I am versed<br />
-						  in JavaScript, Ruby, HTML5, CSS3 and Spanish!</p>
+					<p class="my-blurb">
+						Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a unique approach to problem solving. I am versed in JavaScript, Ruby, HTML5, CSS3 and Spanish!
+					</p>
 
 					<ul class="actions">
 						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1502491193/ResumeVG_u551mb.pdf" class="button special icon fa-download">Resume</a></li>
@@ -38,9 +38,11 @@
 				<header class="major">
 					<h2>Projects</h2>
 					<div class="my-proj-blurb-cont">
-						<h4 class="my-project-blurb">Here are a few of the projects I've worked on.<br />
-							 They were developed using Ruby on Rails, React and HTML5 Canvas.<br />
-							 I believe less is more and my design tends to be minimal and clean. <i class="em em-sparkles"></i></h4>
+						<h4 class="my-project-blurb">
+							Here are a few of the projects I've worked on.
+							They were developed using Ruby on Rails, React and HTML5 Canvas.
+							I believe less is more and my design tends to be minimal and clean. <i class="em em-sparkles"></i>
+						</h4>
 					</div>
 				</header>
 			</section>
