--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1492887469/CoverLetter_qgzwkw.pdf" class="button special icon fa-download">Cover letter</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/p2.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/profile.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
