--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						  in JavaScript, Ruby, HTML5, CSS3 and Spanish.</p>
 
 					<ul class="actions">
-						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1502491193/ResumeVG_u551mb.pdf" class="button special icon fa-download">Resume</a></li>
+						<li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1557966881/Resume_n3ndlk.pdf" class="button special icon fa-download">Resume</a></li>
 						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1492887469/CoverLetter_qgzwkw.pdf" class="button special icon fa-download">Cover letter</a></li>
 					</ul>
 				</div>
