--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</p>
 
 					<ul class="actions">
-						<li><a href="http://res.cloudinary.com/duovuuybb/image/upload/v1522283757/Resume_qdonff.pdf" class="button special icon fa-download">Resume</a></li>
+						<li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1629843769/Resume_2021_thnhyp.pdf" class="button special icon fa-download">Resume</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="images/profile.png" alt="" /></div></div>
