--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1729101353/Frontend_Engineer_Resume_rnciz1.pdf">Resume</a></li>
 					</ul>
 				</div>
-				<div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729183389/IMG_4042_rmwocz.jpg" alt="" /></div>
+				<div class="image phone"><div class="inner"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729183389/IMG_4042_rmwocz.jpg" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
