--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1729101353/Frontend_Engineer_Resume_rnciz1.pdf">Resume</a></li>
 					</ul>
 				</div>
-				<div class="image" style="width: 290px; height: 290px;"><div class="profile"><img src="images/profile2.png" alt="" /></div></div>
+				<div class="image" style="width: 290px; height: 290px;"><div class="profile"><img src="images/profile2.png" alt="" style="width: 290px; height: 290px;" /></div></div>
 			</header>
 
 		<!-- One -->
