--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<section class="spotlight">
 						<div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729182110/wordle_vpkssy.png" alt="" /></div>
 						<div class="content">
-							<h3><a href="http://www.insta-shop.io" cursor="pointer">Wordle</a></h3>
+							<h3><a href="http://www.victorguillen.io/Wordle/" cursor="pointer">Wordle</a></h3>
 							<p>Wordle game from New York Times using React and CSS animations</p>
 						</div>
 					</section>
