--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Projects</h2>
+					<h2>Projects <i class="em em-sparkles"></i></h2>
 					<div class="my-proj-blurb-cont">
 						<h4 class="my-project-blurb">
 							Here are a few of the projects I've worked on.
 							They were developed using React and HTML5 Canvas.
-							I believe less is more and my design tends to be minimal and clean. <i class="em em-sparkles"></i>
+							I believe less is more and my design tends to be minimal and clean.
 						</h4>
 					</div>
 				</header>
@@ -50,24 +50,26 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-            <div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729101531/wordle_tipsyz.png" alt="" /></div>
+            <div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729101531/wordle_tipsyz.png" alt="Wordle" /></div>
 						<div class="content">
-							<h3><a href="http://www.insta-shop.io" cursor="pointer">Wordle</a></h3>
+							<h3 class="project-name"><a href="http://www.victorguillen.io/Wordle/" cursor="pointer">Wordle</a></h3>
+							<h5><a href="https://github.com/victorguillen/Wordle" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Wordle game from New York Times using React and CSS animations</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/dotsp.png" alt="" /></div>
+						<div class="image"><img src="images/dotsp.png" alt="Dots" /></div>
 						<div class="content">
-							<h3><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
+							<h3 class="project-name"><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
+							<h5><a href="https://github.com/victorguillen/Dots" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
 					</section>
 					<section class="special">
 						<ul class="icons labeled">
-							<li><span class="icon fa-file-text"><span class="label">MUI</span></span></li>
-							<li><span class="icon fa-code-fork"><span class="label">Storybook</span></span></li>
-							<li><span class="icon fa-cloud"><span class="label">Figma</span></span></li>
+							<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
+							<li><div class="my-div"><img class="my-icons" src="images/icons/storybook-icon.svg" alt="" /><span class="my-label">Storybook</span></div></li>
+							<li><div class="my-div"><img class="my-icons" src="images/icons/figma-svgrepo-com.svg" alt="" /><span class="my-label">Figma</span></div></li>
 						</ul>
 					</section>
 				</div>
@@ -81,30 +83,24 @@
 						<div class="my-column-container">
 							<div class="my-columns">
 								<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
-							</div>
-							<div class="my-columns">
 								<li><div class="my-div"><img class="my-icons" src="images/icons/html5-original.svg" alt="" /><span class="my-label">HTML5</span></div></li>
 								<li><div class="my-div"><img class="my-icons" src="images/icons/css3-original.svg" alt="" /><span class="my-label">CSS3</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/sass-original.svg" alt="" /><span class="my-label">SASS</span></div></li>
 							</div>
 							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
 								<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
 								<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/heroku-original.svg" alt="" /><span class="my-label">Heroku</span></div></li><br />
 							</div>
 							<div class="my-columns">
-								<li><div class="my-div"><img class="my-icons" src="images/icons/mysql-original.svg" alt="" /><span class="my-label">MySQL</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/postgresql-plain.svg" alt="" /><span class="my-label">PostgreSQL</span></div></li>
-								<li><div class="my-div"><img class="my-icons" src="images/icons/jquery-original.svg" alt="" /><span class="my-label">JQuery</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
 							</div>
 						</div>
 					</ul>
 				</header>
 			</section>
-
-		
+			
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
