--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
-            <div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729101531/wordle_tipsyz.png" alt="" /></div>
+            <div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729101531/wordle_tipsyz.png" alt="Wordle" /></div>
 						<div class="content">
-							<h3><a href="http://www.victorguillen.io/Wordle/" cursor="pointer">Wordle</a></h3>
-							<h5><a href="https://github.com/victorguillen/Wordle" cursor="pointer"><img class="my-icons" src="images/icons/github-original.svg" alt="" /> Github code</a></h5>
+							<h3 class="project-name"><a href="http://www.victorguillen.io/Wordle/" cursor="pointer">Wordle</a></h3>
+							<h5><a href="https://github.com/victorguillen/Wordle" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Wordle game from New York Times using React and CSS animations</p>
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/dotsp.png" alt="" /></div>
+						<div class="image"><img src="images/dotsp.png" alt="Dots" /></div>
 						<div class="content">
-							<h3><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
-							<h5><a href="https://github.com/victorguillen/Dots" cursor="pointer"><img class="my-icons" src="images/icons/github-original.svg" alt="" /> Github code</a></h5>
+							<h3 class="project-name"><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
+							<h5><a href="https://github.com/victorguillen/Dots" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
 					</section>
@@ -85,6 +85,11 @@
 								<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
 								<li><div class="my-div"><img class="my-icons" src="images/icons/html5-original.svg" alt="" /><span class="my-label">HTML5</span></div></li>
 								<li><div class="my-div"><img class="my-icons" src="images/icons/css3-original.svg" alt="" /><span class="my-label">CSS3</span></div></li>
+							</div>
+							<div class="my-columns">
+								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/chrome-original.svg" alt="" /><span class="my-label">Dev Tools</span></div></li>
+								<li><div class="my-div"><img class="my-icons" src="images/icons/github-original.svg" alt="" /><span class="my-label">Github</span></div></li>
 							</div>
 							<div class="my-columns">
 								<li><div class="my-div"><img class="my-icons" src="images/icons/nodejs-original.svg" alt="" /><span class="my-label">Node.js</span></div></li>
