added css classes for responsivness

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Victor Guillen</a></h1>
+					<h1 class="name">Victor Guillen</h1>
 					<p class="my-blurb">
 						Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a unique approach to problem solving. I am versed in JavaScript, HTML5, CSS3 and Spanish!
 					</p>
@@ -28,7 +28,7 @@
 					<ul class="actions">
             <li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1736899489/Frontend_Engineer_Resume_zinivb.pdf">Resume</a></li>
 						<li>
-							<ul class="icons">
+							<ul class="icons main">
 								<li><a href="https://github.com/victorguillen" class="icon fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.linkedin.com/in/victor-guillen-a7b70748" class="icon fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 							</ul>
@@ -75,7 +75,7 @@
 						<header class="major">
 							<h2>Skills</h2>
 							<ul class="icons labeled">
-								<div class="my-column-container">
+								<div class="my-column-container responsive">
 									<div class="my-columns">
 										<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
 										<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
