added favicon and fixed icon alignment

--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
 					<p class="my-blurb">
 						Software Engineer <i class="em em-male-technologist"></i> with a passion for design and a unique approach to problem solving. I am versed in JavaScript, HTML5, CSS3 and Spanish!
 					</p>
-
-					<ul class="actions">
-            <li><a href="https://res.cloudinary.com/duovuuybb/image/upload/v1736899489/Frontend_Engineer_Resume_zinivb.pdf">Resume</a></li>
-						<li>
-							<ul class="icons main">
-								<li><a href="https://github.com/victorguillen" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="https://www.linkedin.com/in/victor-guillen-a7b70748" class="icon fa-linkedin-square"><span class="label">Linkedin</span></a></li>
-							</ul>
-						</li>
-					</ul>
+					<div class="my-column-container">
+						<div class="my-columns">
+							<a href="https://res.cloudinary.com/duovuuybb/image/upload/v1736899489/Frontend_Engineer_Resume_zinivb.pdf" class="resume">Resume</a>
+						</div>
+						<div class="my-columns">
+							<a href="https://github.com/victorguillen" class="icon fa-github fa-lg"></a>
+						</div>
+						<div class="my-columns">
+							<a href="https://www.linkedin.com/in/victor-guillen-a7b70748" class="icon fa-linkedin-square fa-lg"></a>
+						</div>
+					</div>
 				</div>
 				<div class="image" style="width: 290px; height: 290px;"><div class="profile"><img src="images/profile2.png" alt="" style="width: 290px; height: 290px;" /></div></div>
 			</header>
@@ -75,7 +76,7 @@
 						<header class="major">
 							<h2>Skills</h2>
 							<ul class="icons labeled">
-								<div class="my-column-container responsive">
+								<div class="my-column-container-skills">
 									<div class="my-columns">
 										<li><div class="my-div"><img class="my-icons" src="images/icons/react-original.svg" alt="" /><span class="my-label">React</span></div></li>
 										<li><div class="my-div"><img class="my-icons" src="images/icons/javascript-plain.svg" alt="" /><span class="my-label">JavaScript</span></div></li>
