--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<section class="spotlight">
             <div class="image"><img src="https://res.cloudinary.com/duovuuybb/image/upload/v1729101531/wordle_tipsyz.png" alt="Wordle" /></div>
 						<div class="content">
-							<h3 class="project-name"><a href="http://www.victorguillen.io/Wordle/" cursor="pointer">Wordle</a></h3>
+							<h3 class="project-name"><a href="https://victorguillen.github.io/Wordle/" cursor="pointer">Wordle</a></h3>
 							<h5><a href="https://github.com/victorguillen/Wordle" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Wordle game from New York Times using React and CSS animations</p>
 						</div>
@@ -67,7 +67,7 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/dotsp.png" alt="Dots" /></div>
 						<div class="content">
-							<h3 class="project-name"><a href="http://www.victorguillen.io/Dots/" cursor="pointer">Dots</a></h3>
+							<h3 class="project-name"><a href="https://victorguillen.github.io/Dots/" cursor="pointer">Dots</a></h3>
 							<h5><a href="https://github.com/victorguillen/Dots" cursor="pointer"><img class="my-small-icons" src="images/icons/github-original.svg" alt="Github" /></a></h5>
 							<p>Dots is an interactive JavaScript game, written in HTML5 using Canvas, with a Flat Design background to provide a minimalistic modern style of user interface and graphic design. </p>
 						</div>
